configure logging with SeriLog

--- a/monitoring-observability/monitoring-observability/appsettings.json
+++ b/monitoring-observability/monitoring-observability/appsettings.json
@@ -1,10 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "ApplicationName": "elastic-monitoring-observer-app",
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://192.168.1.100:9200"
   },
   "AllowedHosts": "*"
 }
