--- a/monitoring-observability/monitoring-observability/monitoring-observability.csproj
+++ b/monitoring-observability/monitoring-observability/monitoring-observability.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="prometheus-net.AspNetCore" Version="4.1.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
